src/styles.scss
@import "~@ng-select/ng-select/themes/material.theme.css";

html,
body {
  height: 100%;
}

body {
  margin: 0 10%;
  background-color: aliceblue;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.banner {
  text-align: center;
  background-color: lightblue;
  padding: 0.5rem;
  margin-bottom: 0.5rem;

  h2 {
    margin: 0;
  }
}

h3 {
  font-weight: 500 !important;
}

.fix-mat-dialog-ng-select {
  width: 400px;
  .mat-mdc-dialog-content,
  .mat-mdc-dialog-surface {
    overflow: visible;
  }
}

button {
  background: none;
  border: none;
  cursor: pointer;
}

// correction towards MUI style
app-timezone-select {
	.ng-select .ng-select-container.ng-appearance-outline {
		align-items: center;
		&:after {
			border-color: rgba(0, 0, 0, 0.38);
		}
	
		.ng-value-container {
			border-top: none;
      align-items: center;
		}

    .ng-value-container .ng-input[role="combobox"] {
      margin-left: 1rem;
      bottom: unset;
    }
	
		div.ng-value-container ~ span.ng-clear-wrapper {
			bottom: 18px;
			&:hover {
				opacity: 1;
				color: red;
			}
		}
	}
}

